--- a/src/modules/courses-public/styles/courses.module.css
+++ b/src/modules/courses-public/styles/courses.module.css
@@ -14,3 +14,61 @@
 	background-size: cover;
 	background-position: bottom;
 }
+
+.fondoTop {
+	background: url('/trend-persona.png') no-repeat;
+	background-size: cover;
+	background-position: bottom right;
+}
+
+.transicionBanner {
+	animation: slideDown 0.6s ease-out forwards;
+}
+
+@keyframes slideDown {
+	0% {
+		opacity: 0;
+		transform: translateY(-58px);
+	}
+	100% {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
+
+.carouselShadow {
+	position: relative;
+}
+
+.carouselShadow::before {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 10px;
+	height: 100%;
+	background-color: #0c0c1d;
+	box-shadow: 10px 0 20px 20px rgb(12, 12, 29);
+	z-index: 10;
+	pointer-events: none;
+	margin-left: -10px;
+}
+.carouselShadow::after {
+	content: '';
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 10px;
+	height: 100%;
+	background-color: #0c0c1d;
+	box-shadow: -10px 0 20px 20px rgb(12, 12, 29);
+	z-index: 10;
+	pointer-events: none;
+	margin-right: -10px;
+}
+
+@media (max-width: 1024px) {
+	.fondoTop {
+		display: none;
+	}
+}
