--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,9 @@
 	--color-foreground: var(--foreground);
 	--font-sans: var(--font-geist-sans);
 	--font-mono: var(--font-geist-mono);
+	--font-montserrat-fuente: var(--font-montserrat);
+	--color-trendacademy-morado: #161a31;
+	--color-trendacademy-rosado: #e72480;
 	--color-sidebar-ring: var(--sidebar-ring);
 	--color-sidebar-border: var(--sidebar-border);
 	--color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -120,4 +123,59 @@
 	body {
 		@apply bg-background text-foreground;
 	}
+}
+
+input[type='search']::-webkit-search-cancel-button {
+	filter: brightness(0) invert(1); /* cambia a blanco */
+}
+
+/* para que la imagen con fondo blanco al cargar no este feo */
+
+.fix-image-flash {
+	backface-visibility: hidden;
+	-webkit-backface-visibility: hidden;
+}
+
+/* animacion como levitando */
+@keyframes float-small {
+	0%,
+	100% {
+		transform: translateY(0);
+	}
+	50% {
+		transform: translateY(-5px);
+	}
+}
+
+@keyframes float-medium {
+	0%,
+	100% {
+		transform: translateY(0);
+	}
+	50% {
+		transform: translateY(-8px);
+	}
+}
+
+@keyframes float-large {
+	0%,
+	100% {
+		transform: translateY(0);
+	}
+	50% {
+		transform: translateY(-12px);
+	}
+}
+
+/* Las clases */
+.float-small {
+	animation: float-small 3s ease-in-out infinite;
+}
+
+.float-medium {
+	animation: float-medium 4s ease-in-out infinite;
+}
+
+.float-large {
+	animation: float-large 5s ease-in-out infinite;
 }
