--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,7 @@
 	--font-montserrat-fuente: var(--font-montserrat);
 	--color-trendacademy-morado: #161a31;
 	--color-trendacademy-rosado: #e72480;
+	--color-trendacademy-azul: #054c9c;
 	--color-sidebar-ring: var(--sidebar-ring);
 	--color-sidebar-border: var(--sidebar-border);
 	--color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
